test/syc/bad/cexprncarg.c
/*
 * Expression is not constant.
 */

void foo(int a)
{
	enum e {
		e1 = a
	} x;
}
